# generic_parser

./: .gitignore  CMakeLists.txt
include/BaseParser/: Context.h  ParserBase.h  ParserWithAction.h  declarations.h  parser_aliases.h
include/CombinedParsers/: Operators.h  ParserAlternative.h  ParserList.h  ParserOmited.h  ParserPredicateNot.h  ParserRaw.h  ParserRepeate.h  ParserSequence.h
include/Concepts/: Concepts.h
include/Constants/: Constants.h
include/ParsingRule/: ParseRuleDeclaration.h
include/Scanner/: ConstexprFunctions.h  Scanners.h  ScanningFunctions.h  scanner_aliases.h  scanners_char_ctx.h  scanners_num_ctx.h
include/Test/: AlternativeParserTest.h  BaseParserTest.h  ListParserTest.h  PredicateNotTest.h  RepeateParserTest.h
include/base_parser/: Context.h  base_parser.h
include/combined_parsers/: alternative.h  list.h  parser_predicate_not.h  parser_with_action.h  repeate.h  rule.h  sequence.h
include/common/: Constants.h  common.h  macro.h  parsing.h  utils_parsing.h  utils_tuple.h
include/examples/: ExampleJson.h
include/examples/Json/: ExampleJson.h  large.txt  medium.txt  small.txt
include/examples/calculator/: calculator.h
src/: main.cpp
